[package]
name = "dms-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.9"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "derive"] }
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
csv = "1.3.1"
[[bin]]
name = "server"
path = "src/server/main.rs"
