[package]
name = "dms-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.9", features = ["multipart", "macros"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "derive",
    "chrono",
] }
maud = { version = "*", features = ["axum"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
csv = "1.3.1"
chrono = { version = "0.4.39", features = ["serde"] }
futures-util = "0.3.31"
tracing-subscriber = "0.3.19"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
serde_json = "1.0.135"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "etl"
path = "src/etl/main.rs"
