[tool.poetry]
name = "deepscan-db"
version = "0.1.0"
description = ""
authors = ["Nithish Narasimman <nithish@octant.bio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
